DR-1179 Fix alignment vertically issue, and refactor adding transitions and bug with small phones

--- a/src/wwwroot/styles/core/_base.scss
+++ b/src/wwwroot/styles/core/_base.scss
@@ -132,6 +132,9 @@ section {
   justify-content: center;
   align-items: center;
 }
+.flex--vertically-start{
+  align-items: flex-start;
+}
 .flex--vertically-center{
   align-items: center;
 }
@@ -359,5 +362,14 @@ a {
   }
   p{
     font-size: 0.675rem !important;
+  }
+}
+@media screen and (max-width: 325px) {
+
+  input{
+    min-width: 280px !important;
+  }
+  .selectize-input{
+    min-width: 280px !important;
   }
 }
