--- a/src/wwwroot/styles/views/_header.scss
+++ b/src/wwwroot/styles/views/_header.scss
@@ -185,6 +185,13 @@ header{
     }
   }
 }
+@media screen and (max-width: 325px){
+  header{
+    .header--config-menu{
+      width: 100%;
+    }
+  }
+}
 
 
 // -------------------------------------
